tests/baselines/reference/classAbstractExtends.errors.txt
classAbstractExtends.ts(9,7): error TS18052: Non-abstract class 'C' does not implement all abstract members of 'B'


==== classAbstractExtends.ts (1 errors) ====
    class A {
        foo() {}
    }
    
    abstract class B extends A {
        abstract bar();
    }
    
    class C extends B { }
          ~
!!! error TS18052: Non-abstract class 'C' does not implement all abstract members of 'B'
!!! related TS2515 classAbstractExtends.ts:6:14: Non-abstract class 'C' does not implement inherited abstract member 'bar' from class 'B'.
    
    abstract class D extends B {}
    
    class E extends B {
        bar() {}
    }